Compilador/src/Utilidad/y.output
   0  $accept : programa $end

   1  programa : sentencias

   2  sentencia : ejecutable ','
   3            | declarativa ','

   4  sentencias : sentencia sentencias
   5             | sentencia

   6  bloque_de_sentencias : '{' sentencias '}'

   7  condicion : exp "<=" exp
   8            | exp ">=" exp
   9            | exp '=' exp
  10            | exp '<' exp
  11            | exp '>' exp
  12            | exp "!=" exp

  13  declarativa : tipo lista_de_variables
  14              | FUN ID '{' sentencias RETURN '(' retorno ')' '}'

  15  lista_de_variables : ID ';' lista_de_variables
  16                     | ID

  17  tipo : LINTEGER
  18       | FUN
  19       | VOID
  20       | USINTEGER

  21  retorno : ID '(' ID ')'
  22          | ID '(' ')'
  23          | ID '(' CTE ')'
  24          | sentencias

  25  ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE bloque_de_sentencias ENDIF
  26             | IF '(' condicion ')' sentencia ELSE sentencia ENDIF
  27             | IF '(' condicion ')' bloque_de_sentencias ELSE sentencia ENDIF
  28             | IF '(' condicion ')' sentencia ELSE bloque_de_sentencias ENDIF
  29             | IF '(' condicion ')' bloque_de_sentencias ENDIF
  30             | IF '(' condicion ')' sentencia ENDIF
  31             | WHILE '(' condicion ')' bloque_de_sentencias
  32             | WHILE '(' condicion ')' sentencia
  33             | PRINT '(' CADENA ')'
  34             | exp
  35             | ID ":=" exp
  36             | error

  37  exp : exp '+' termino
  38      | exp '-' termino
  39      | termino

  40  termino : termino '*' factor
  41          | termino '/' factor
  42          | factor

  43  factor : ID
  44         | LINTEGER
  45         | USINTEGER

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	.  error

	programa  goto 10
	sentencias  goto 11
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 1
	ejecutable : error .  (36)

	.  reduce 36


state 2
	ejecutable : ID . ":=" exp  (35)
	factor : ID .  (43)

	":="  shift 19
	','  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	'*'  reduce 43
	'/'  reduce 43


state 3
	tipo : LINTEGER .  (17)
	factor : LINTEGER .  (44)

	ID  reduce 17
	','  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44


state 4
	tipo : USINTEGER .  (20)
	factor : USINTEGER .  (45)

	ID  reduce 20
	','  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45


state 5
	ejecutable : IF . '(' condicion ')' bloque_de_sentencias ELSE bloque_de_sentencias ENDIF  (25)
	ejecutable : IF . '(' condicion ')' sentencia ELSE sentencia ENDIF  (26)
	ejecutable : IF . '(' condicion ')' bloque_de_sentencias ELSE sentencia ENDIF  (27)
	ejecutable : IF . '(' condicion ')' sentencia ELSE bloque_de_sentencias ENDIF  (28)
	ejecutable : IF . '(' condicion ')' bloque_de_sentencias ENDIF  (29)
	ejecutable : IF . '(' condicion ')' sentencia ENDIF  (30)

	'('  shift 20
	.  error


state 6
	ejecutable : WHILE . '(' condicion ')' bloque_de_sentencias  (31)
	ejecutable : WHILE . '(' condicion ')' sentencia  (32)

	'('  shift 21
	.  error


state 7
	ejecutable : PRINT . '(' CADENA ')'  (33)

	'('  shift 22
	.  error


state 8
	tipo : VOID .  (19)

	.  reduce 19


9: shift/reduce conflict (shift 23, reduce 18) on ID
state 9
	declarativa : FUN . ID '{' sentencias RETURN '(' retorno ')' '}'  (14)
	tipo : FUN .  (18)

	ID  shift 23


state 10
	$accept : programa . $end  (0)

	$end  accept


state 11
	programa : sentencias .  (1)

	.  reduce 1


state 12
	sentencias : sentencia . sentencias  (4)
	sentencias : sentencia .  (5)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	$end  reduce 5
	RETURN  reduce 5
	'}'  reduce 5
	')'  reduce 5

	sentencias  goto 24
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 13
	sentencia : ejecutable . ','  (2)

	','  shift 25
	.  error


state 14
	sentencia : declarativa . ','  (3)

	','  shift 26
	.  error


state 15
	ejecutable : exp .  (34)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	','  reduce 34


state 16
	declarativa : tipo . lista_de_variables  (13)

	ID  shift 29
	.  error

	lista_de_variables  goto 30


state 17
	exp : termino .  (39)
	termino : termino . '*' factor  (40)
	termino : termino . '/' factor  (41)

	'*'  shift 31
	'/'  shift 32
	"<="  reduce 39
	">="  reduce 39
	"!="  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'='  reduce 39
	','  reduce 39
	')'  reduce 39
	'+'  reduce 39
	'-'  reduce 39


state 18
	termino : factor .  (42)

	.  reduce 42


state 19
	ejecutable : ID ":=" . exp  (35)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 36
	termino  goto 17
	factor  goto 18


state 20
	ejecutable : IF '(' . condicion ')' bloque_de_sentencias ELSE bloque_de_sentencias ENDIF  (25)
	ejecutable : IF '(' . condicion ')' sentencia ELSE sentencia ENDIF  (26)
	ejecutable : IF '(' . condicion ')' bloque_de_sentencias ELSE sentencia ENDIF  (27)
	ejecutable : IF '(' . condicion ')' sentencia ELSE bloque_de_sentencias ENDIF  (28)
	ejecutable : IF '(' . condicion ')' bloque_de_sentencias ENDIF  (29)
	ejecutable : IF '(' . condicion ')' sentencia ENDIF  (30)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	condicion  goto 37
	exp  goto 38
	termino  goto 17
	factor  goto 18


state 21
	ejecutable : WHILE '(' . condicion ')' bloque_de_sentencias  (31)
	ejecutable : WHILE '(' . condicion ')' sentencia  (32)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	condicion  goto 39
	exp  goto 38
	termino  goto 17
	factor  goto 18


state 22
	ejecutable : PRINT '(' . CADENA ')'  (33)

	CADENA  shift 40
	.  error


state 23
	declarativa : FUN ID . '{' sentencias RETURN '(' retorno ')' '}'  (14)

	'{'  shift 41
	.  error


state 24
	sentencias : sentencia sentencias .  (4)

	.  reduce 4


state 25
	sentencia : ejecutable ',' .  (2)

	.  reduce 2


state 26
	sentencia : declarativa ',' .  (3)

	.  reduce 3


state 27
	exp : exp '+' . termino  (37)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	termino  goto 42
	factor  goto 18


state 28
	exp : exp '-' . termino  (38)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	termino  goto 43
	factor  goto 18


state 29
	lista_de_variables : ID . ';' lista_de_variables  (15)
	lista_de_variables : ID .  (16)

	';'  shift 44
	','  reduce 16


state 30
	declarativa : tipo lista_de_variables .  (13)

	.  reduce 13


state 31
	termino : termino '*' . factor  (40)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	factor  goto 45


state 32
	termino : termino '/' . factor  (41)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	factor  goto 46


state 33
	factor : ID .  (43)

	.  reduce 43


state 34
	factor : LINTEGER .  (44)

	.  reduce 44


state 35
	factor : USINTEGER .  (45)

	.  reduce 45


state 36
	ejecutable : ID ":=" exp .  (35)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	','  reduce 35


state 37
	ejecutable : IF '(' condicion . ')' bloque_de_sentencias ELSE bloque_de_sentencias ENDIF  (25)
	ejecutable : IF '(' condicion . ')' sentencia ELSE sentencia ENDIF  (26)
	ejecutable : IF '(' condicion . ')' bloque_de_sentencias ELSE sentencia ENDIF  (27)
	ejecutable : IF '(' condicion . ')' sentencia ELSE bloque_de_sentencias ENDIF  (28)
	ejecutable : IF '(' condicion . ')' bloque_de_sentencias ENDIF  (29)
	ejecutable : IF '(' condicion . ')' sentencia ENDIF  (30)

	')'  shift 47
	.  error


state 38
	condicion : exp . "<=" exp  (7)
	condicion : exp . ">=" exp  (8)
	condicion : exp . '=' exp  (9)
	condicion : exp . '<' exp  (10)
	condicion : exp . '>' exp  (11)
	condicion : exp . "!=" exp  (12)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	"<="  shift 48
	">="  shift 49
	"!="  shift 50
	'<'  shift 51
	'>'  shift 52
	'='  shift 53
	'+'  shift 27
	'-'  shift 28
	.  error


state 39
	ejecutable : WHILE '(' condicion . ')' bloque_de_sentencias  (31)
	ejecutable : WHILE '(' condicion . ')' sentencia  (32)

	')'  shift 54
	.  error


state 40
	ejecutable : PRINT '(' CADENA . ')'  (33)

	')'  shift 55
	.  error


state 41
	declarativa : FUN ID '{' . sentencias RETURN '(' retorno ')' '}'  (14)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	.  error

	sentencias  goto 56
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 42
	exp : exp '+' termino .  (37)
	termino : termino . '*' factor  (40)
	termino : termino . '/' factor  (41)

	'*'  shift 31
	'/'  shift 32
	"<="  reduce 37
	">="  reduce 37
	"!="  reduce 37
	'<'  reduce 37
	'>'  reduce 37
	'='  reduce 37
	','  reduce 37
	')'  reduce 37
	'+'  reduce 37
	'-'  reduce 37


state 43
	exp : exp '-' termino .  (38)
	termino : termino . '*' factor  (40)
	termino : termino . '/' factor  (41)

	'*'  shift 31
	'/'  shift 32
	"<="  reduce 38
	">="  reduce 38
	"!="  reduce 38
	'<'  reduce 38
	'>'  reduce 38
	'='  reduce 38
	','  reduce 38
	')'  reduce 38
	'+'  reduce 38
	'-'  reduce 38


state 44
	lista_de_variables : ID ';' . lista_de_variables  (15)

	ID  shift 29
	.  error

	lista_de_variables  goto 57


state 45
	termino : termino '*' factor .  (40)

	.  reduce 40


state 46
	termino : termino '/' factor .  (41)

	.  reduce 41


state 47
	ejecutable : IF '(' condicion ')' . bloque_de_sentencias ELSE bloque_de_sentencias ENDIF  (25)
	ejecutable : IF '(' condicion ')' . sentencia ELSE sentencia ENDIF  (26)
	ejecutable : IF '(' condicion ')' . bloque_de_sentencias ELSE sentencia ENDIF  (27)
	ejecutable : IF '(' condicion ')' . sentencia ELSE bloque_de_sentencias ENDIF  (28)
	ejecutable : IF '(' condicion ')' . bloque_de_sentencias ENDIF  (29)
	ejecutable : IF '(' condicion ')' . sentencia ENDIF  (30)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	'{'  shift 58
	.  error

	sentencia  goto 59
	ejecutable  goto 13
	declarativa  goto 14
	bloque_de_sentencias  goto 60
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 48
	condicion : exp "<=" . exp  (7)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 61
	termino  goto 17
	factor  goto 18


state 49
	condicion : exp ">=" . exp  (8)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 62
	termino  goto 17
	factor  goto 18


state 50
	condicion : exp "!=" . exp  (12)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 63
	termino  goto 17
	factor  goto 18


state 51
	condicion : exp '<' . exp  (10)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 64
	termino  goto 17
	factor  goto 18


state 52
	condicion : exp '>' . exp  (11)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 65
	termino  goto 17
	factor  goto 18


state 53
	condicion : exp '=' . exp  (9)

	ID  shift 33
	LINTEGER  shift 34
	USINTEGER  shift 35
	.  error

	exp  goto 66
	termino  goto 17
	factor  goto 18


state 54
	ejecutable : WHILE '(' condicion ')' . bloque_de_sentencias  (31)
	ejecutable : WHILE '(' condicion ')' . sentencia  (32)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	'{'  shift 58
	.  error

	sentencia  goto 67
	ejecutable  goto 13
	declarativa  goto 14
	bloque_de_sentencias  goto 68
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 55
	ejecutable : PRINT '(' CADENA ')' .  (33)

	.  reduce 33


state 56
	declarativa : FUN ID '{' sentencias . RETURN '(' retorno ')' '}'  (14)

	RETURN  shift 69
	.  error


state 57
	lista_de_variables : ID ';' lista_de_variables .  (15)

	.  reduce 15


state 58
	bloque_de_sentencias : '{' . sentencias '}'  (6)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	.  error

	sentencias  goto 70
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 59
	ejecutable : IF '(' condicion ')' sentencia . ELSE sentencia ENDIF  (26)
	ejecutable : IF '(' condicion ')' sentencia . ELSE bloque_de_sentencias ENDIF  (28)
	ejecutable : IF '(' condicion ')' sentencia . ENDIF  (30)

	ELSE  shift 71
	ENDIF  shift 72
	.  error


state 60
	ejecutable : IF '(' condicion ')' bloque_de_sentencias . ELSE bloque_de_sentencias ENDIF  (25)
	ejecutable : IF '(' condicion ')' bloque_de_sentencias . ELSE sentencia ENDIF  (27)
	ejecutable : IF '(' condicion ')' bloque_de_sentencias . ENDIF  (29)

	ELSE  shift 73
	ENDIF  shift 74
	.  error


state 61
	condicion : exp "<=" exp .  (7)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 7


state 62
	condicion : exp ">=" exp .  (8)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 8


state 63
	condicion : exp "!=" exp .  (12)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 12


state 64
	condicion : exp '<' exp .  (10)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 10


state 65
	condicion : exp '>' exp .  (11)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 11


state 66
	condicion : exp '=' exp .  (9)
	exp : exp . '+' termino  (37)
	exp : exp . '-' termino  (38)

	'+'  shift 27
	'-'  shift 28
	')'  reduce 9


state 67
	ejecutable : WHILE '(' condicion ')' sentencia .  (32)

	.  reduce 32


state 68
	ejecutable : WHILE '(' condicion ')' bloque_de_sentencias .  (31)

	.  reduce 31


state 69
	declarativa : FUN ID '{' sentencias RETURN . '(' retorno ')' '}'  (14)

	'('  shift 75
	.  error


state 70
	bloque_de_sentencias : '{' sentencias . '}'  (6)

	'}'  shift 76
	.  error


state 71
	ejecutable : IF '(' condicion ')' sentencia ELSE . sentencia ENDIF  (26)
	ejecutable : IF '(' condicion ')' sentencia ELSE . bloque_de_sentencias ENDIF  (28)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	'{'  shift 58
	.  error

	sentencia  goto 77
	ejecutable  goto 13
	declarativa  goto 14
	bloque_de_sentencias  goto 78
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 72
	ejecutable : IF '(' condicion ')' sentencia ENDIF .  (30)

	.  reduce 30


state 73
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE . bloque_de_sentencias ENDIF  (25)
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE . sentencia ENDIF  (27)

	error  shift 1
	ID  shift 2
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	'{'  shift 58
	.  error

	sentencia  goto 79
	ejecutable  goto 13
	declarativa  goto 14
	bloque_de_sentencias  goto 80
	exp  goto 15
	tipo  goto 16
	termino  goto 17
	factor  goto 18


state 74
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ENDIF .  (29)

	.  reduce 29


state 75
	declarativa : FUN ID '{' sentencias RETURN '(' . retorno ')' '}'  (14)

	error  shift 1
	ID  shift 81
	LINTEGER  shift 3
	USINTEGER  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	VOID  shift 8
	FUN  shift 9
	.  error

	sentencias  goto 82
	sentencia  goto 12
	ejecutable  goto 13
	declarativa  goto 14
	exp  goto 15
	tipo  goto 16
	retorno  goto 83
	termino  goto 17
	factor  goto 18


state 76
	bloque_de_sentencias : '{' sentencias '}' .  (6)

	.  reduce 6


state 77
	ejecutable : IF '(' condicion ')' sentencia ELSE sentencia . ENDIF  (26)

	ENDIF  shift 84
	.  error


state 78
	ejecutable : IF '(' condicion ')' sentencia ELSE bloque_de_sentencias . ENDIF  (28)

	ENDIF  shift 85
	.  error


state 79
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE sentencia . ENDIF  (27)

	ENDIF  shift 86
	.  error


state 80
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE bloque_de_sentencias . ENDIF  (25)

	ENDIF  shift 87
	.  error


state 81
	retorno : ID . '(' ID ')'  (21)
	retorno : ID . '(' ')'  (22)
	retorno : ID . '(' CTE ')'  (23)
	ejecutable : ID . ":=" exp  (35)
	factor : ID .  (43)

	":="  shift 19
	'('  shift 88
	','  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	'*'  reduce 43
	'/'  reduce 43


state 82
	retorno : sentencias .  (24)

	.  reduce 24


state 83
	declarativa : FUN ID '{' sentencias RETURN '(' retorno . ')' '}'  (14)

	')'  shift 89
	.  error


state 84
	ejecutable : IF '(' condicion ')' sentencia ELSE sentencia ENDIF .  (26)

	.  reduce 26


state 85
	ejecutable : IF '(' condicion ')' sentencia ELSE bloque_de_sentencias ENDIF .  (28)

	.  reduce 28


state 86
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE sentencia ENDIF .  (27)

	.  reduce 27


state 87
	ejecutable : IF '(' condicion ')' bloque_de_sentencias ELSE bloque_de_sentencias ENDIF .  (25)

	.  reduce 25


state 88
	retorno : ID '(' . ID ')'  (21)
	retorno : ID '(' . ')'  (22)
	retorno : ID '(' . CTE ')'  (23)

	ID  shift 90
	CTE  shift 91
	')'  shift 92
	.  error


state 89
	declarativa : FUN ID '{' sentencias RETURN '(' retorno ')' . '}'  (14)

	'}'  shift 93
	.  error


state 90
	retorno : ID '(' ID . ')'  (21)

	')'  shift 94
	.  error


state 91
	retorno : ID '(' CTE . ')'  (23)

	')'  shift 95
	.  error


state 92
	retorno : ID '(' ')' .  (22)

	.  reduce 22


state 93
	declarativa : FUN ID '{' sentencias RETURN '(' retorno ')' '}' .  (14)

	.  reduce 14


state 94
	retorno : ID '(' ID ')' .  (21)

	.  reduce 21


state 95
	retorno : ID '(' CTE ')' .  (23)

	.  reduce 23


Rules never reduced:
	tipo : FUN  (18)


State 9 contains 1 shift/reduce conflict.


32 terminals, 14 nonterminals
46 grammar rules, 96 states
